[package]
name = "hyperion-boot"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
limine = ["dep:hyperion-boot-limine"]
opensbi = ["dep:hyperion-boot-opensbi"]
bootboot = []
multiboot1 = []
multiboot2 = []
# Pick limine OR bootboot OR multiboot1 OR multiboot2, they conflict with eachother

[dependencies]
spin.workspace = true

hyperion-log.path = "../log"

[dependencies.hyperion-boot-limine]
path = "../boot-limine"
optional = true

[dependencies.hyperion-boot-opensbi]
path = "../boot-opensbi"
optional = true
