[package]
name = "hyperion-drivers"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if.workspace = true

hyperion-clock.path = "../clock"
hyperion-driver-framebuffer.path = "../driver-framebuffer"
hyperion-keyboard.path = "../keyboard"
hyperion-vfs.path = "../vfs"

[target.x86_64-unknown-none.dependencies]
hyperion-driver-acpi.path = "../driver-acpi"
# hyperion-driver-pic.path = "../driver-pic"
# hyperion-driver-pit.path = "../driver-pit"
hyperion-driver-ps2.path = "../driver-ps2"
hyperion-driver-rtc.path = "../driver-rtc"
