[package]
name = "hyperion-kshell"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time.workspace = true
futures-util.workspace = true
snafu.workspace = true
spin.workspace = true
libm = "0.2"
glam = { version = "0.24", default-features = false, features = ["libm"] }

hyperion-color.path = "../color"
hyperion-escape.path = "../escape"
hyperion-framebuffer.path = "../framebuffer"
hyperion-kernel-info.path = "../kernel-info"
hyperion-keyboard.path = "../keyboard"
hyperion-log-multi.path = "../log-multi"
hyperion-log.path = "../log"
hyperion-num-postfix.path = "../num-postfix"
hyperion-random.path = "../random"
hyperion-vfs.path = "../vfs"

hyperion-sample-elf = { path = "../sample-elf", artifact = "bin", target = "x86_64-unknown-none" }

[target.x86_64-unknown-none.dependencies]
hyperion-driver-acpi.path = "../driver-acpi"
hyperion-loader.path = "../loader"
hyperion-mem.path = "../mem"
hyperion-scheduler.path = "../scheduler"
